--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
+[Bb]uild/
+[Bb]uilds/
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 
@@ -64,12 +66,12 @@ ExportedObj/
 sysinfo.txt
 
 # Builds
+!*.exe
+!*.dll
 *.apk
 *.unitypackage
 *.unitypackage
 *.app
-!*.exe
-!*.dll
 
 # Crashlytics generated file
 crashlytics-build.properties
